--- a/projet/assets/styles/css/login.css
+++ b/projet/assets/styles/css/login.css
@@ -17,385 +17,295 @@ html {
   }
 
 
- @media (min-width: 992px)
- {
-  .col-lg-3 {
-    max-width: 40% !important;
+
+
+h2
+{
+  font-weight: 400;
+  font-family: 'Roboto', sans-serif;
+  margin: 0 0 20px 0;
+  color: #111;
 }
- 
- }
- p {
-    margin: 0 0 20px 0;
-    color: #646464;
-  }
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    font-weight:bold;
-    font-family: 'Roboto', sans-serif;
-    margin: 0 0 20px 0;
-    color: #111;
-  }
-  h1,
+
+h2 {
+  line-height: 1.2;
+}
+
+h2 {
+  font-size: 28px;
+}
+@media only screen and (max-width: 1199px) {
   h2 {
-    line-height: 1.2;
+    font-size: 26px;
   }
-  h3,
-  h4,
-  h5,
-  h6 {
-    line-height: 1.4;
-  }
-  h1 {
-    font-size: 36px;
-  }
-  @media only screen and (max-width: 1199px) {
-    h1 {
-      font-size: 34px;
-    }
-  }
-  @media only screen and (max-width: 991px) {
-    h1 {
-      font-size: 32px;
-    }
-  }
-  @media only screen and (max-width: 767px) {
-    h1 {
-      font-size: 30px;
-    }
-  }
+}
+@media only screen and (max-width: 991px) {
   h2 {
-    font-size: 28px;
+    font-size: 24px;
   }
-  @media only screen and (max-width: 1199px) {
-    h2 {
-      font-size: 26px;
-    }
-  }
-  @media only screen and (max-width: 991px) {
-    h2 {
-      font-size: 24px;
-    }
-  }
-  @media only screen and (max-width: 767px) {
-    h2 {
-      font-size: 22px;
-    }
-  }
-  h3 {
+}
+@media only screen and (max-width: 767px) {
+  h2 {
     font-size: 22px;
   }
-  @media only screen and (max-width: 991px) {
-    h3 {
-      font-size: 20px;
-    }
-  }
-  @media only screen and (max-width: 767px) {
-    h3 {
-      font-size: 18px;
-    }
-  }
-  h4 {
-    font-size: 20px;
-  }
-  @media only screen and (max-width: 991px) {
-    h4 {
-      font-size: 18px;
-    }
-  }
-  @media only screen and (max-width: 767px) {
-    h4 {
-      font-size: 16px;
-    }
-  }
-  h5 {
-    font-size: 18px;
-  }
-  @media only screen and (max-width: 991px) {
-    h5 {
-      font-size: 16px;
-    }
-  }
+}
 
-  a {
-    text-decoration: none;
-  }
-  a:active,
-  a:hover,
-  a:focus {
-    text-decoration: none;
-  }
-  a:active,
-  a:hover,
-  a:focus {
-    outline: 0 none;
-  }
-  img {
-    max-width: 36em;
-    height: auto;
-  }
-  ul {
-    list-style: outside none none;
-    margin: 0;
-    padding: 0;
-  }
-  .fxt-content-between {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-  }
-  @media only screen and (max-width: 767px) {
-    .fxt-none-767 {
-      display: none !important;
-    }
-  }
-  @media only screen and (max-width: 991px) {
-    .fxt-none-991 {
-      display: none !important;
-    }
-  }
- 
 
-  .fxt-layout {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    width: 100%;
-    background-repeat: no-repeat;
-    background-position: center bottom;
-    background-size: cover;
-    position: relative;
-    min-height: 100vh;
-    z-index: 1;
-    padding: 50px 0 20px;
+a {
+  text-decoration: none;
+}
+a:active,
+a:hover,
+a:focus {
+  text-decoration: none;
+}
+a:active,
+a:hover,
+a:focus {
+  outline: 0 none;
+}
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+
+
+.fxt-template-layout9 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-position: center bottom;
+  background-size: cover;
+  position: relative;
+  min-height: 100vh;
+  z-index: 1;
+  padding: 50px 0 20px;
+}
+.fxt-template-layout9:before {
+  content: "";
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.1);
+  left: 0;
+  top: 0;
+  position: absolute;
+  z-index: -1;
+}
+.fxt-template-layout9 .fxt-checkbox-area {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  margin-bottom: 30px;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+.fxt-template-layout9 .fxt-content {
+  padding-top: 40px;
+  padding-bottom: 15px;
+  padding-left: 70px;
+  margin-left: 40px;
+  border-left: 2px solid rgba(111, 117, 182, 0.5);
+}
+@media only screen and (max-width: 991px) {
+  .fxt-template-layout9 .fxt-content {
+    padding-left: 0;
+    margin-left: 0;
+    margin-top: 40px;
+    border-left: 0;
+    padding-bottom: 0;
+    border-top: 2px solid rgba(111, 117, 182, 0.5);
   }
-  .fxt-layout:before {
-    content: "";
-    height: 100%;
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.1);
-    left: 0;
-    top: 0;
-    position: absolute;
-    z-index: -1;
-  }
-  .fxt-layout .fxt-checkbox-area {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-    margin-bottom: 30px;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-  }
-  .fxt-layout .fxt-content {
-    padding-top: 40px;
-    padding-bottom: 15px;
-    padding-left: 70px;
-    margin-left: 40px;
-    border-left: 2px solid rgba(111, 117, 182, 0.5);
-  }
-  @media only screen and (max-width: 991px) {
-    .fxt-layout  .fxt-content {
-      padding-left: 0;
-      margin-left: 0;
-      margin-top: 40px;
-      border-left: 0;
-      padding-bottom: 0;
-      border-top: 2px solid rgba(111, 117, 182, 0.5);
-    }
-  }
-  .fxt-layout .fxt-content h2 {
-    font-size: 20px;
-    color: #fff;
-    font-weight: bold;
-  }
-  @media only screen and (max-width: 991px) {
-    .fxt-layout .fxt-content h2 {
-      text-align: center;
-    }
-  }
-  .fxt-layout .fxt-header {
+}
+.fxt-template-layout9 .fxt-content h2 {
+  font-size: 20px;
+  color: #fff;
+  font-weight: bold;
+}
+@media only screen and (max-width: 991px) {
+  .fxt-template-layout9 .fxt-content h2 {
     text-align: center;
   }
-  .fxt-layout .fxt-logo {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 60vw;
-  }
-  
-  .fxt-layout .fxt-form .form-group {
-    position: relative;
-    z-index: 1;
-  }
-  .fxt-layout .fxt-form .form-group .field-icon {
-    position: absolute;
-    z-index: 1;
-    right: 19px;
-    bottom: 18px;
-    font-size: 14px;
-    color: #bebebe;
-  }
-  .fxt-layout.fxt-form .form-group .field-icon:before {
-    padding: 17px 10px;
-  }
-  .fxt-layout .fxt-form .form-control {
-    min-height: 50px;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-    border: 1px solid #8385bf;
-    padding: 10px 15px;
-    background-color: transparent;
-    color: #fff;
-  }
-  .fxt-layout .fxt-form input::-webkit-input-placeholder {
-    color: #bebebe;
-    font-size: 18px;
-    font-weight: 300;
-  }
-  .fxt-layout .fxt-form input::-moz-placeholder {
-    color: #bebebe;
-    font-size: 18px;
-    font-weight: 300;
-  }
-  .fxt-layout .fxt-form input:-moz-placeholder {
-    color: #bebebe;
-    font-size: 18px;
-    font-weight: 300;
-  }
-  .fxt-layout .fxt-form input:-ms-input-placeholder {
-    color: #bebebe;
-    font-size: 18px;
-    font-weight: 300;
-  }
-  .fxt-layout  .fxt-btn-fill {
-    font-family: 'Roboto', sans-serif;
-    cursor: pointer;
-    display: inline-block;
-    font-size: 17px;
-    font-weight: 500;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-    outline: none;
-    border: 0;
-    color: #fff;
-    border-radius: 3px;
-    background-color: #ffbd3f;
-    padding: 10px 36px;
-    margin-bottom: 10px;
-    width: 100%;
-    -webkit-transition: all 0.3s ease-in-out;
-    -o-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
-  }
-  .fxt-layout .fxt-btn-fill:hover {
-    background-color: #db9e2d;
-    border-color: #db9e2d;
-  }
-  .fxt-layout .fxt-btn-fill:focus {
-    outline: none;
-  }
-  .fxt-layout  .switcher-text {
-    color: #b6b6b6;
-    font-size: 15px;
-    margin-top: 5px;
-    display: block;
-    -webkit-transition: all 0.3s ease-in-out;
-    -o-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
-  }
-  .fxt-layout  .switcher-text:last-child {
-    margin-right: 0;
-  }
-  .fxt-layout  .switcher-text:hover {
-    color: #e6e6e6;
-  }
-  .fxt-layout  .switcher-text2 {
-    color: #d4d4d4;
-    font-size: 15px;
-    margin-top: 5px;
-    margin-left: 2px;
-    display: inline-block;
-    -webkit-transition: all 0.3s ease-in-out;
-    -o-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
-  }
-  .fxt-layout .switcher-text2:last-child {
-    margin-right: 0;
-  }
-  .fxt-layout  .switcher-text2:hover {
-    color: #e6e6e6;
-  }
-  .fxt-layout  .checkbox {
-    padding-left: 5px;
-    margin-right: 10px;
-  }
-  .fxt-layout  .checkbox label {
-    padding-left: 20px;
-    color: #b9b9b9;
-    margin-bottom: 0;
-    font-size: 15px;
-    position: relative;
-  }
-  .fxt-layout  .checkbox label:before {
-    content: "";
-    position: absolute;
-    width: 15px;
-    height: 15px;
-    top: 4px;
-    left: 0;
-    margin-left: -5px;
-    border: 1px solid;
-    border-color: #dcdcdc;
-    border-radius: 2px;
-    background-color: transparent;
-    -webkit-transition: border 0.15s ease-in-out, color 0.15s ease-in-out;
-    -o-transition: border 0.15s ease-in-out, color 0.15s ease-in-out;
-    transition: border 0.15s ease-in-out, color 0.15s ease-in-out;
-  }
-  .fxt-layout  .checkbox label:after {
-    position: absolute;
-    margin-left: -20px;
-    padding-left: 3px;
-    font-size: 10px;
-    color: #555555;
-  }
-  .fxt-layout  .checkbox input[type="checkbox"] {
-    display: none;
-  }
-  .fxt-layout  .checkbox input[type="checkbox"]:checked + label::after {
-    font-family: 'Font Awesome 5 Free';
-    content: "\f00c";
-    font-weight: 900;
-    color: #ffffff;
-    left: 15px;
-    top: 4px;
-  }
-  .fxt-layout  .checkbox input[type="checkbox"]:checked + label::before {
-    background-color: #ffbd3f;
-    border-color: #ffbd3f;
-  }
- 
+}
+.fxt-template-layout9 .fxt-header {
+  text-align: center;
+}
+.fxt-template-layout9 .fxt-logo {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 40vw;
+}
+.fxt-template-layout9 .fxt-form .form-group {
+  position: relative;
+  z-index: 1;
+}
+.fxt-template-layout9 .fxt-form .form-group .field-icon {
+  position: absolute;
+  z-index: 1;
+  right: 19px;
+  bottom: 18px;
+  font-size: 14px;
+  color: #bebebe;
+}
+.fxt-template-layout9 .fxt-form .form-group .field-icon:before {
+  padding: 17px 10px;
+}
+.fxt-template-layout9 .fxt-form .form-control {
+  min-height: 50px;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  border: 1px solid #8385bf;
+  padding: 10px 15px;
+  background-color: transparent;
+  color: #fff;
+}
+.fxt-template-layout9 .fxt-form input::-webkit-input-placeholder {
+  color: #bebebe;
+  font-size: 18px;
+  font-weight: 300;
+}
+.fxt-template-layout9 .fxt-form input::-moz-placeholder {
+  color: #bebebe;
+  font-size: 18px;
+  font-weight: 300;
+}
+.fxt-template-layout9 .fxt-form input:-moz-placeholder {
+  color: #bebebe;
+  font-size: 18px;
+  font-weight: 300;
+}
+.fxt-template-layout9 .fxt-form input:-ms-input-placeholder {
+  color: #bebebe;
+  font-size: 18px;
+  font-weight: 300;
+}
+.fxt-template-layout9 .fxt-btn-fill {
+  font-family: 'Roboto', sans-serif;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 17px;
+  font-weight: 500;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  outline: none;
+  border: 0;
+  color: #fff;
+  border-radius: 3px;
+  background-color: #ffbd3f;
+  padding: 10px 36px;
+  margin-bottom: 10px;
+  width: 100%;
+  -webkit-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+.fxt-template-layout9 .fxt-btn-fill:hover {
+  background-color: #db9e2d;
+  border-color: #db9e2d;
+}
+.fxt-template-layout9 .fxt-btn-fill:focus {
+  outline: none;
+}
+.fxt-template-layout9 .switcher-text {
+  color: #b6b6b6;
+  font-size: 15px;
+  margin-top: 5px;
+  display: block;
+  -webkit-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+.fxt-template-layout9 .switcher-text:last-child {
+  margin-right: 0;
+}
+.fxt-template-layout9 .switcher-text:hover {
+  color: #e6e6e6;
+}
+.fxt-template-layout9 .switcher-text2 {
+  color: #d4d4d4;
+  font-size: 15px;
+  margin-top: 5px;
+  margin-left: 2px;
+  display: inline-block;
+  -webkit-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+.fxt-template-layout9 .switcher-text2:last-child {
+  margin-right: 0;
+}
+.fxt-template-layout9 .switcher-text2:hover {
+  color: #e6e6e6;
+}
+.fxt-template-layout9 .checkbox {
+  padding-left: 5px;
+  margin-right: 10px;
+}
+.fxt-template-layout9 .checkbox label {
+  padding-left: 20px;
+  color: #b9b9b9;
+  margin-bottom: 0;
+  font-size: 15px;
+  position: relative;
+}
+.fxt-template-layout9 .checkbox label:before {
+  content: "";
+  position: absolute;
+  width: 15px;
+  height: 15px;
+  top: 4px;
+  left: 0;
+  margin-left: -5px;
+  border: 1px solid;
+  border-color: #dcdcdc;
+  border-radius: 2px;
+  background-color: transparent;
+  -webkit-transition: border 0.15s ease-in-out, color 0.15s ease-in-out;
+  -o-transition: border 0.15s ease-in-out, color 0.15s ease-in-out;
+  transition: border 0.15s ease-in-out, color 0.15s ease-in-out;
+}
+.fxt-template-layout9 .checkbox label:after {
+  position: absolute;
+  margin-left: -20px;
+  padding-left: 3px;
+  font-size: 10px;
+  color: #555555;
+}
+.fxt-template-layout9 .checkbox input[type="checkbox"] {
+  display: none;
+}
+.fxt-template-layout9 .checkbox input[type="checkbox"]:checked + label::after {
+  font-family: 'Font Awesome 5 Free';
+  content: "\f00c";
+  font-weight: 900;
+  color: #ffffff;
+  left: 15px;
+  top: 4px;
+}
+.fxt-template-layout9 .checkbox input[type="checkbox"]:checked + label::before {
+  background-color: #ffbd3f;
+  border-color: #ffbd3f;
+}
+
+.animate__animated.animate__fadeInUp {
+  --animate-duration: 3s;
+}
+
+.animate__animated.animate__flipInY {
+  --animate-duration: 3s;
+}
